# Bonkbot-core

./: README.md  pyproject.toml
bonk-bot-core/: __init__.py
src/: desc.txt
